# LnkAnalyser

./: .gitignore  .travis.yml  LICENSE  distribute.py  pyproject.toml  readme.md  setup.py  version
.github/workflows/: codeql-analysis.yml
LnkAnalyser/: lnkanalyser.py
tests/: Desktop.lnk  test_LnkAnalyser.py
